--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -3,17 +3,21 @@
 //$host: 'http://assets.aversio.com/resources/resellers/2/138/125/img/';
 //media query
 $media-xlg: 1500px; //120em
-$media-lg: 1200px; //75em
+$media-lg: 1420px; //75em
 $media-md: 992px; //62em
 $media-sm: 768px; //48em
 $media-xs: 544px; //34em
+$media-xxs: 300px;
 
 
 //fonts
-// $font-1: ;
+$font-1: "Inter", sans-serif;
 // $font-2: ;
 
 //colors
+$white: #fff;
+$white-1: rgba(255, 255, 255, 0.70);
+$button: #2783F3;
 
 
 //weights
