--- a/src/style/themes/_themes.scss
+++ b/src/style/themes/_themes.scss
@@ -1,13 +1,63 @@
-*{
-    box-sizing: border-box;
-    &:focus{
-        outline: none;
-    }
-    &:hover{
-        outline: none;
-    }
+* {
+  font-family: $font-1;
+  box-sizing: border-box;
+  &:focus {
+    outline: none;
+  }
+  &:hover {
+    outline: none;
+  }
 }
-body{
-    margin: 0;
-    padding: 0;
+body {
+  margin: 0;
+}
+.container {
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding-left: 150px;
+  padding-right: 150px;
+  @media (max-width: $media-md){
+    padding-left: 80px;
+    padding-right: 80px;
+  }
+  @media (max-width: $media-sm){
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+  @media (max-width: $media-xs){
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+  @media (max-width: $media-xxs){
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+.button {
+  background: $button;
+  padding: 12px 20px;
+  text-decoration: none;
+  color: #fff;
+  font-family: $font-1;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  &:hover {
+    background: rgb(2, 0, 36);
+    background: linear-gradient(
+      90deg,
+      rgba(30, 144, 255, 1) 0%,
+      rgba(0, 212, 255, 1) 100%
+    );
+  }
+  @media (max-width: $media-xs){
+    font-size: 12px;
+    line-height: 20px;
+}
 }
