--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -9,16 +9,14 @@ $media-sm: 768px; //48em
 $media-xs: 544px; //34em
 $media-xxs: 300px;
 
-
 //fonts
 $font-1: "Inter", sans-serif;
 // $font-2: ;
 
 //colors
 $white: #fff;
-$white-1: rgba(255, 255, 255, 0.70);
-$button: #2783F3;
-
+$white-1: rgba(255, 255, 255, 0.7);
+$button: #2783f3;
 
 //weights
 // $light:300;
