--- a/src/style/pages/home/_banner.scss
+++ b/src/style/pages/home/_banner.scss
@@ -10,13 +10,6 @@
     padding-bottom: 100px;
     padding-top: 150px;
   }
-  &::after{
-    content: '';
-    width: 100%;
-    position: absolute;
-    height: 100%;
-    background-image: url('/static/svg/contactform.svg');
-  }
   &::before {
     content: "";
     background-color: transparent;
@@ -108,6 +101,8 @@
       width: 30%;
       @media (max-width: $media-lg) {
         margin-top: 80px;
+      }
+      @media (max-width: $media-md) {
         width: 100%;
       }
       .bannerslider {
